# TileHarvester

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  findings.md  pyproject.toml  quick_start_uv.sh  todo.md
.github/workflows/: ci.yml  codeql.yml
tests/: test_descriptions.py  test_tile_engine.py
tileharvester/: __init__.py  __main__.py  annotate.py  backfill.py  cli.py  config.py  db.py  descriptions.py  recompute.py  refine.py  strava_client.py  sync.py  systemd.py  tile_engine.py
