[project]
name = "tileharvester"
version = "0.1.0"
description = "Automatically add Squadrats stats to Strava activities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "polyline>=2.0.0",
]

[project.scripts]
tileharvester = "tileharvester.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tileharvester"]
